<resources>
    <string name="app_name">Fake Call</string>
    <string name="action_setting">Setting</string>
    <string name="photoUser">Photo</string>
    <string name="contact">Contact</string>
    <string name="name_user">Name</string>
    <string name="phone_user">Phone</string>
    <string name="incoming_call">Incomming</string>
    <string name="unknown">Unknow</string>
    <string name="make_call"><![CDATA[Save & Make Call]]></string>
    <string name="incoming">Incomming</string>
    <string name="outgoing">Outgoing</string>
    <string name="missed">Missed</string>
    <string name="duration">Duration (second)</string>
    <string name="hang_up_after">Hang up after</string>
    <string name="voice">Voice</string>
    <string name="schedule">Make Call</string>
    <string name="time">Start after (second)</string>
    <string name="show_application_icon">Show application icon in launcher</string>
    <string name="number_to_dial">Number to dial to launch app</string>
    <string name="missed_call">Miss call</string>
    <string name="content_mess">Message</string>
    <string name="schedule_mess">Schedule Message</string>
    <string name="number_hint">Number</string>
    <string name="name_hint">Name</string>
    <string name="load_contact">Load contact</string>
    <string name="make_sms"><![CDATA[Save & Make SMS]]></string>
</resources>
