<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_photo_fake_sms"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_user"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="1dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_name_fake_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:textColor="@color/colorText"
            android:textColorHint="@android:color/darker_gray" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_phone_fake_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint"
            android:inputType="phone"
            android:textColor="@color/colorText"
            android:textColorHint="@android:color/darker_gray" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_mess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_mess"
            android:textColor="@color/colorText"
            android:textColorHint="@android:color/darker_gray" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_layout_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/edt_time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Schedule at"
                android:inputType="number"
                android:textColor="@color/colorText"
                android:textColorHint="@android:color/darker_gray" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/btn_time_picker"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="Receive"
            android:textColor="@android:color/black" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="Sent"
            android:textColor="@android:color/black" />
    </RadioGroup>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btn_load_contact_sms"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/load_contact" />

        <Button
            android:id="@+id/btn_make_sms"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/make_sms" />


    </TableRow>
</LinearLayout>